scijava-ops-ext-parser: run formatter